# grimoire

./: .gitignore  .gitmodules  .pylintrc  CONTRIBUTING.md  README.md  blog.md  compose.yaml  grimoire.yaml  main.py  pyproject.toml  repomix-output.xml
.github/workflows/: lint.yml  test.yml
eval/: README.md  answers.json  eval.json  eval.md  evaluation.py  full_answers.md  grimoire.yaml  main.py  meta.py  questions.json  questions.py  questions_test.json  results.md  run.py  scores.md
grimoire/: add.py  ask.py  cli.py  configuration.py  flush.py  helpers.py  init.py  main.py  sync.py  update.py  verify.py
grimoire/helpers/: ingestion.py  llm.py  rag.py  retriever.py  typer.py  vectorstore.py
sandbox/: ask.py  blog_post.tex  code_ingestion.py  code_ingestion_01.py  code_ingestion_02.py  dep_resolver.py  helpers.py  ingestion_pipeline.py  npm_resolver.py  package.json  py_dep_resolver.py  py_resolver.py  pyproject_test.toml  repo_clone.py  retrieval_chain.py  text_ingestion.py  text_ingestion_01.py  text_ingestion_02.py  text_ingestion_03.py
sandbox/eval/: evaluation.py  full_answers.md  questions.json  questions_test.json  results.md  run.py  scores.md
sandbox/files/: geom.py  hello.py  vilko.md
test_projects/: init.sh
test_projects/swisstination/: .flake8  .gitignore  .pylintrc  README.md  compose.yaml  devenv.nix  ingest.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
test_projects/swisstination/.github/workflows/: ci.yml  repository.yml  storybook.yml
test_projects/swisstination/.storybook/: main.ts  preview.ts
test_projects/swisstination/app/: exceptions.py  helpers.py  main.py  mongo.py
test_projects/swisstination/app/models/: tours.py  users.py
test_projects/swisstination/app/routes/: amenities.py  tours.py  users.py
test_projects/swisstination/app/tests/: conftest.py  test_amenities_routes.py  test_user_routes.py
test_projects/swisstination/bruno/: bruno.json
test_projects/swisstination/bruno/Amenities/: Amenity.bru  Labels.bru
test_projects/swisstination/bruno/Tours/: Create Tour.bru  Dislike Tour.bru  Like Tour.bru  Tags.bru  Tour.bru  Tours.bru
test_projects/swisstination/bruno/Users/: Get Avatar.bru  Login.bru  Logout.bru  Me.bru  Signup.bru  Update Avatar.bru  Update Profile.bru  User Profile.bru
test_projects/swisstination/bruno/environments/: swisstination.bru
test_projects/swisstination/client/: index.html
test_projects/swisstination/client/src/: main.ts
test_projects/swisstination/client/src/api/: client.ts
test_projects/swisstination/client/src/api/clients/: amenities.ts  base.ts  index.ts  tours.ts  users.ts
test_projects/swisstination/client/src/api/models/: AmenityLabelFilters.ts  AmenityResponse.ts  ApiResponse.ts  TourCreateRequest.ts  TourGetResponse.ts  TourListFilters.ts  TourListResponse.ts  TourVoteResponse.ts  UserProfile.ts  UserProfileMeResponse.ts  UserProfileResponse.ts  UserSignupRequest.ts  UserUpdateRequest.ts  index.ts
test_projects/swisstination/client/src/components/: badge.tsx  button.tsx  card.tsx  index.ts  layout.tsx  loginButton.tsx  navbar.tsx  select.tsx  spinner.tsx
test_projects/swisstination/client/src/components/app/: index.ts  tourCard.tsx  tourDetails.tsx  tourDetailsMap.tsx  tourFilters.tsx  tourList.tsx  tourTabAmenities.tsx  tourTabDescription.tsx  tourTabStats.tsx
test_projects/swisstination/client/src/context/: app.tsx
test_projects/swisstination/client/src/css/: fonts.css  styles.css  typography.css  variables.css
test_projects/swisstination/client/src/css/components/: badge.css  button.css  card.css
test_projects/swisstination/client/src/framework/: component.ts  index.ts  jsx.test.tsx  jsx.ts  utils.ts
test_projects/swisstination/client/src/framework/router/: activePage.ts  index.ts  link.ts  matcher.test.ts  matcher.ts  models.ts  router.ts  utils.ts
test_projects/swisstination/client/src/pages/: about.tsx  home.tsx  index.ts  login.tsx  me.tsx  signup.tsx  tour.tsx  tours.tsx
test_projects/swisstination/client/src/pages/test/: button-state.tsx  index.ts  passing-data.tsx  router-params.tsx
test_projects/swisstination/client/src/utils/: geo.ts  io.ts
test_projects/swisstination/data/: generator.py  tours.json  users.json
test_projects/swisstination/lnw/: LNW1.md  LNW2.md  LNW3.html  LNW3.md
test_projects/swisstination/stories/: Card.stories.ts  Card.ts  NeoBadge.stories.ts  NeoBadge.ts  NeoButton.stories.ts  NeoButton.ts
tests/: conftest.py  test_ask.py  test_command_help.py  test_flush.py  test_init.py  test_main.py  test_verify.py
